back-end entities added